--- a/components/layouts/navbar/navbarDesktop/navbarDesktop.module.scss
+++ b/components/layouts/navbar/navbarDesktop/navbarDesktop.module.scss
@@ -12,6 +12,10 @@
     background-color: rgba($color-secondary, 0);
   }
 
+  .navbar:hover.transparent {
+    background-color: rgba($color-secondary, 1);
+  }
+
   .navbar {
     width: 100vw;
     background-color: $color-secondary;
