--- a/components/layouts/Navbar/NavbarPhone/NavbarPhone.module.scss
+++ b/components/layouts/Navbar/NavbarPhone/NavbarPhone.module.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/_variables.scss";
+@import "../../../../styles/_animations.scss";
 
 .hidden {
   transform: translate(calc(-100% + 3rem));
@@ -8,6 +9,7 @@
   position: fixed;
   z-index: 1;
 
+  animation: 0.3s ease-in-out loadOpacity;
   transition: transform 0.3s ease-in-out;
 
   .hamburger {
