--- a/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
+++ b/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
@@ -4,6 +4,7 @@
 .navbarWrapper {
   position: fixed;
   z-index: 1;
+  width: 100%;
 
   animation: 0.3s ease-in-out loadOpacity;
 
@@ -16,7 +17,6 @@
   }
 
   .navbar {
-    width: 100vw;
     background-color: $color-secondary;
     color: $color-white;
     display: flex;
