Add 404 page, change layout

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,3 +8,6 @@ $color-primary: #9ef1e2;
 $color-secondary: #232323;
 $color-background: #0d0c0f;
 $color-white: #fff;
+
+// Heights
+$navbar-height-desktop: 4rem;
