--- a/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
+++ b/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
@@ -23,7 +23,8 @@
     justify-content: space-between;
 
     transition: background-color 0.3s ease-in-out;
-    padding: 0.5rem;
+    height: $navbar-height-desktop;
+    padding: 0 0.5rem;
 
     .header {
       display: flex;
@@ -37,6 +38,7 @@
     }
 
     .list {
+      margin-top: 0.5rem;
       list-style: none;
       padding: 0;
       font-size: 1rem;
