--- a/components/layouts/Layout.module.scss
+++ b/components/layouts/Layout.module.scss
@@ -1,3 +1,6 @@
+@import "../../styles/variables.scss";
+
 .main {
+  padding-top: $navbar-height-desktop;
   min-height: 100vh - var(--navbar-height);
 }
