--- a/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
+++ b/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
@@ -44,6 +44,7 @@
       font-size: 1rem;
       font-weight: 600;
       display: flex;
+      position: static;
 
       .link {
         display: inline-block;
@@ -51,11 +52,21 @@
         margin: 0.25rem 0;
         padding: 0.75rem 0.5rem;
         border-radius: 0.5rem;
+        z-index: 2;
       }
 
       .active {
-        background-color: $color-primary;
+        z-index: 2;
         color: $color-secondary;
+        background-color: $color-primary;
+      }
+
+      .activeHighlightContainer {
+        position: fixed;
+        height: 2.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
       }
     }
   }
