--- a/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
+++ b/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
@@ -44,12 +44,11 @@
       font-size: 1rem;
       font-weight: 600;
       display: flex;
-      position: static;
+      position: relative;
 
       .link {
         display: inline-block;
-        width: 100%;
-        margin: 0.25rem 0;
+        margin: 0.25rem 0.5rem;
         padding: 0.75rem 0.5rem;
         border-radius: 0.5rem;
         z-index: 2;
@@ -68,6 +67,12 @@
         flex-direction: column;
         justify-content: flex-end;
       }
+    }
+
+    .account {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
   }
 }
