--- a/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
+++ b/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
@@ -10,6 +10,7 @@
 
   .navbar:not(:hover).transparent {
     background-color: rgba($color-secondary, 0);
+    box-shadow: none;
   }
 
   .navbar:hover.transparent {
@@ -22,7 +23,11 @@
     display: flex;
     justify-content: space-between;
 
-    transition: background-color 0.3s ease-in-out;
+    transition: box-shadow, background-color 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+
+    box-shadow: 0px 17px 35px 0px rgba($color-background, 0.5);
+
     height: $navbar-height-desktop;
     padding: 0 1rem;
 
