--- a/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
+++ b/components/layouts/Navbar/NavbarDesktop/NavbarDesktop.module.scss
@@ -24,9 +24,10 @@
     justify-content: space-between;
 
     transition: box-shadow, background-color 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
 
-    box-shadow: 0px 17px 35px 0px rgba($color-background, 0.5);
+    -webkit-box-shadow: 0px 16px 40px 0px rgba($color-background, 0.5);
+    -moz-box-shadow: 0px 16px 40px 0px rgba($color-background, 0.5);
+    box-shadow: 0px 16px 40px 0px rgba($color-background, 0.5);
 
     height: $navbar-height-desktop;
     padding: 0 1rem;
