--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,4 +1,5 @@
-@import "styles/variables.scss";
+@import "styles/_variables.scss";
+@import "styles/_animations.scss";
 
 .pageContainer {
   padding: 0;
@@ -10,6 +11,10 @@
 
     display: flex;
     justify-content: center;
+
+    .onLoad {
+      animation: 0.3s ease-in-out loadOpacity;
+    }
 
     @media screen and (min-width: $breakpoint-md) {
       justify-content: flex-start;
@@ -59,6 +64,7 @@
         height: 100%;
         object-fit: cover;
         pointer-events: none;
+        transition: 0.3s;
       }
     }
   }
