--- a/styles/globals.css
+++ b/styles/globals.css
@@ -141,3 +141,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+@keyframes loadOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
