--- a/components/community/post/Post.module.scss
+++ b/components/community/post/Post.module.scss
@@ -5,6 +5,7 @@
   padding: 1rem;
   background-color: $color-secondary;
   border-radius: 0.5rem;
+  width: 100%;
 
   .userInfo {
     display: flex;
