--- a/components/layouts/Layout.module.scss
+++ b/components/layouts/Layout.module.scss
@@ -8,11 +8,11 @@
     padding: 3rem 1rem 1rem;
 
     @media (min-width: $breakpoint-sm) {
-      padding-top: 1rem;
+      padding: 1rem 3rem 1rem;
     }
 
     @media (min-width: $breakpoint-md) {
-      padding-top: 5rem;
+      padding: 5rem 1rem 1rem;
     }
   }
 }
