--- a/pages/community/community.module.scss
+++ b/pages/community/community.module.scss
@@ -2,5 +2,9 @@
 
 .pageContainer {
   margin: 0 auto;
-  max-width: 500px;
+  max-width: 520px;
+
+  @media screen and (min-width: $breakpoint-lg) {
+    max-width: 700px;
+  }
 }
