--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,6 +8,7 @@ $color-primary: #9ef1e2;
 $color-secondary: #232323;
 $color-background: #0d0c0f;
 $color-white: #fff;
+$color-gray: #b4b4b4;
 
 // Heights
 $navbar-height-desktop: 4rem;
