--- a/pages/diets/diets.module.scss
+++ b/pages/diets/diets.module.scss
@@ -1,5 +1,54 @@
+@import "styles/variables.scss";
+
 .dietsPageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 95vh;
+
   .dietDayContainer {
     width: 100%;
+  }
+
+  .dietDayControls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    width: 30rem;
+
+    .day {
+      font-size: 1.25rem;
+    }
+
+    .button {
+      width: 3rem;
+      height: 3rem;
+      border-radius: 100%;
+      border: 1px solid $color-secondary;
+      background-color: $color-secondary;
+      color: #fff;
+
+      font-size: 1.2rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+
+      svg {
+        transform: scale(1.25);
+      }
+
+      &:hover {
+        background-color: $color-primary;
+        color: #000;
+      }
+
+      &:disabled {
+        background-color: rgba($color-gray, 0.1);
+        color: rgba($color-gray, 0.1);
+        pointer-events: none;
+      }
+    }
   }
 }
