--- a/components/diets/Analytics/Analytics.module.scss
+++ b/components/diets/Analytics/Analytics.module.scss
@@ -8,18 +8,20 @@
 
   justify-content: space-between;
   display: flex;
+  flex-direction: column;
+
+  .header {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
 
   .macro {
     display: grid;
     grid-template-columns: 1fr 1fr;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
-
-    .header {
-      font-size: 1.25rem;
-      font-weight: bold;
-      margin-bottom: 0.5rem;
-    }
 
     .legend {
       .carbs,
@@ -56,9 +58,7 @@
 
     .pieChart {
       position: relative;
-      display: flex;
-      margin-left: 2rem;
-      width: 300px;
+      margin: 2rem;
 
       .pieChartCalories {
         position: absolute;
@@ -76,10 +76,6 @@
         }
       }
     }
-  }
-
-  .chartContainer {
-    width: 60%;
   }
 }
 
