--- a/components/diets/Analytics/Analytics.module.scss
+++ b/components/diets/Analytics/Analytics.module.scss
@@ -79,87 +79,43 @@
   }
 }
 
-@media screen and (min-width: $breakpoint-lg) {
+@media screen and (min-width: $breakpoint-md) {
   .analytics {
-    background-color: $color-secondary;
-    border-radius: 0.5rem;
-    padding: 0.75rem;
-    margin-bottom: 1rem;
-
-    justify-content: space-between;
-    display: flex;
-
     .macro {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
       display: flex;
-      justify-content: flex-start;
-
-      .header {
-        font-size: 1.25rem;
-        font-weight: bold;
-        margin-bottom: 0.5rem;
-      }
-
-      .legend {
-        .carbs,
-        .protein,
-        .fat {
-          margin-top: 1rem;
-          display: flex;
-          align-items: center;
-          width: max-content;
-        }
-
-        .carbs:before,
-        .protein:before,
-        .fat:before {
-          content: "";
-          display: inline-block;
-          width: 1rem;
-          height: 1rem;
-          margin-right: 0.5rem;
-        }
-
-        .carbs:before {
-          background-color: #4287f5;
-        }
-
-        .fat:before {
-          background-color: #d6410f;
-        }
-
-        .protein:before {
-          background-color: #6a2135;
-        }
-      }
+      flex-direction: row;
 
       .pieChart {
+        margin-left: 4rem;
         position: relative;
-        display: flex;
-        margin-left: 2rem;
-        width: 300px;
-
-        .pieChartCalories {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-
-          .number {
-            font-size: 3rem;
-          }
-        }
+        width: 250px;
       }
     }
 
     .chartContainer {
-      width: 60%;
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (min-width: $breakpoint-lg) {
+  .analytics {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+
+    .macro {
+      display: flex;
+      flex-direction: row;
+
+      .pieChart {
+        margin-left: 4rem;
+        position: relative;
+        width: 300px;
+      }
+    }
+
+    .chartContainer {
+      width: 100%;
     }
   }
 }
