Refactor styling, fix main page background for phones

--- a/components/diets/Analytics/Analytics.module.scss
+++ b/components/diets/Analytics/Analytics.module.scss
@@ -98,7 +98,7 @@
   }
 }
 
-@media screen and (min-width: $breakpoint-lg) {
+@media screen and (min-width: $breakpoint-xl) {
   .analytics {
     display: grid;
     grid-template-columns: 2fr 3fr;
