--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,8 @@
 // Breakpoints
 $breakpoint-sm: 576px; // phone - default
 $breakpoint-md: 1024px; // tablet
-$breakpoint-lg: 1920px; // desktop
+$breakpoint-lg: 1600px; // desktop
+$breakpoint-xl: 1920px; // desktop
 
 // Variables
 $color-primary: #9ef1e2;
