--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -4,6 +4,11 @@
 .pageContainer {
   padding: 0;
 
+  .highlight {
+    color: $color-primary;
+    font-weight: 700;
+  }
+
   .header {
     width: 100%;
     height: 95vh;
@@ -51,20 +56,80 @@
       @media screen and (min-width: $breakpoint-lg) {
         font-size: 3.25rem;
       }
-
-      .highlight {
-        color: $color-primary;
-        font-weight: 700;
-      }
     }
 
     .imageContainer {
       .image {
         width: 100%;
         height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 0;
         object-fit: cover;
-        pointer-events: none;
-        transition: 0.3s;
+      }
+    }
+  }
+
+  .purchaseSection {
+    width: 100%;
+    padding: 1rem;
+
+    .section {
+      height: 100%;
+      padding: 1rem;
+      background-color: $color-secondary;
+      border-radius: 0.5rem;
+      box-sizing: border-box;
+
+      .cards {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        .card {
+          padding: 1rem;
+          border: 2px solid $color-background;
+          border-radius: 0.5rem;
+
+          -webkit-box-shadow: 8px 8px 24px 0px $color-background;
+          -moz-box-shadow: 8px 8px 24px 0px $color-background;
+          box-shadow: 8px 8px 24px 0px $color-background;
+
+          .planName {
+            font-size: 1.25rem;
+            font-weight: 700;
+            text-align: center;
+            margin-bottom: 1rem;
+          }
+
+          li {
+            margin-top: 0.5rem;
+          }
+
+          button {
+            margin: 0 auto;
+            padding: 0.75rem 1.5rem;
+            border-radius: 50rem;
+            background-color: $color-primary-light;
+            color: $color-white;
+            font-weight: 700;
+            font-size: 1.25rem;
+            border: none;
+            cursor: pointer;
+            transition: 0.3s ease-in-out;
+            outline: none;
+            margin-top: 2rem;
+            // center the button
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+        }
+
+        .premium {
+          background-color: $color-primary;
+        }
       }
     }
   }
