--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -87,6 +87,11 @@
         flex-direction: column;
         gap: 1rem;
 
+        @media screen and (min-width: $breakpoint-smd) {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+        }
+
         .card {
           padding: 1rem;
           border: 2px solid $color-background;
@@ -96,15 +101,21 @@
           -moz-box-shadow: 8px 8px 24px 0px $color-background;
           box-shadow: 8px 8px 24px 0px $color-background;
 
-          .planName {
-            font-size: 1.25rem;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 1rem;
-          }
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
 
-          li {
-            margin-top: 0.5rem;
+          .planInfo {
+            .planName {
+              font-size: 1.25rem;
+              font-weight: 700;
+              text-align: center;
+              margin-bottom: 1rem;
+            }
+
+            li {
+              margin-top: 0.5rem;
+            }
           }
 
           button {
@@ -120,10 +131,17 @@
             transition: 0.3s ease-in-out;
             outline: none;
             margin-top: 2rem;
+
             // center the button
             display: flex;
             justify-content: center;
             align-items: center;
+
+            &:hover {
+              background-color: lighten($color-primary-light, 5);
+              transform: translateY(-0.3rem);
+              box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+            }
           }
         }
 
@@ -132,5 +150,9 @@
         }
       }
     }
+  }
+
+  .suggestionContainer {
+    padding: 0 1rem 1rem;
   }
 }
