--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,6 @@
 // Breakpoints
 $breakpoint-sm: 576px; // phone - default
+$breakpoint-smd: 756px;
 $breakpoint-md: 1024px; // tablet
 $breakpoint-lg: 1600px; // desktop
 $breakpoint-xl: 1920px; // desktop
