--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -2,13 +2,17 @@
   overflow: hidden;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 11;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   .form {
-    position: fixed;
-    z-index: 11;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    z-index: 12;
+    margin: 0 1rem;
+    position: relative;
   }
 }
