--- a/components/Form/PlanForm/PlanForm.module.scss
+++ b/components/Form/PlanForm/PlanForm.module.scss
@@ -14,6 +14,13 @@
     flex-direction: column;
     justify-content: center;
 
+    input,
+    option,
+    select,
+    textarea {
+      font-size: 1rem;
+    }
+
     &:not(:last-child) {
       margin-bottom: 1.5rem;
     }
